force-app/main/default/objects/Contact/fields/Actived__c.field-meta.xml
<CustomField>
    <fullName>Actived__c</fullName>
    <label>Actived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>