force-app/main/default/objects/Contact/fields/Apakah_Ada_Family_Lain_dalam_1_KK__c.field-meta.xml
<CustomField>
    <fullName>Apakah_Ada_Family_Lain_dalam_1_KK__c</fullName>
    <label>Apakah Ada Family Lain dalam 1 KK?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>