force-app/main/default/objects/Contact/fields/attribute_id__c.field-meta.xml
<CustomField>
    <fullName>attribute_id__c</fullName>
    <formula>&quot;OWNERINFO&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>attribute_id</label>
    <type>Text</type>
</CustomField>