force-app/main/default/objects/Contact/fields/Business_Scale__c.field-meta.xml
<CustomField>
    <fullName>Business_Scale__c</fullName>
    <label>Business Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>