force-app/main/default/objects/Contact/fields/City_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>City_Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] City Master Data</label>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts (City Master Data)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>