force-app/main/default/objects/Contact/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>