force-app/main/default/objects/Contact/fields/Company_Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Company_Kecamatan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Kecamatan</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Informations (Company Kecamatan)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>