force-app/main/default/objects/Contact/fields/Company_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Company_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Kelurahan</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Informations (Company Kelurahan)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>