force-app/main/default/objects/Contact/fields/Company_Map_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Map_2__c</fullName>
    <label>Company Map</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>