force-app/main/default/objects/Contact/fields/Company_Map__c.field-meta.xml
<CustomField>
    <fullName>Company_Map__c</fullName>
    <label>Company Map</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>