force-app/main/default/objects/Contact/fields/Company_Maps_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Maps_URL__c</fullName>
    <label>Company Maps URL</label>
    <type>Url</type>
</CustomField>