force-app/main/default/objects/Contact/fields/Company_Maps_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>Company_Maps_URL_Long__c</fullName>
    <label>Company Maps URL Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>