force-app/main/default/objects/Contact/fields/Company_Number_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Company_Number_of_Employee__c</fullName>
    <label>Company Number of Employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>