force-app/main/default/objects/Contact/fields/Company_Province__c.field-meta.xml
<CustomField>
    <fullName>Company_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Informations (Company Province)</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>