force-app/main/default/objects/Contact/fields/Company_RT__c.field-meta.xml
<CustomField>
    <fullName>Company_RT__c</fullName>
    <label>Company RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>