force-app/main/default/objects/Contact/fields/Confins_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Confins_Customer_ID__c</fullName>
    <description>Confins Customer ID</description>
    <label>Confins Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>