force-app/main/default/objects/Contact/fields/Contact_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contact Person ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>