force-app/main/default/objects/Contact/fields/Date_of_Birth_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Formula__c</fullName>
    <formula>IF(ISBLANK( Date_of_Birth__c ), &apos;&apos;, TEXT(DAY( Date_of_Birth__c )) &amp; &quot;/&quot; &amp; 
TEXT(MONTH( Date_of_Birth__c )) &amp; &quot;/&quot; &amp; 
TEXT(YEAR( Date_of_Birth__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Text</type>
</CustomField>