force-app/main/default/objects/Contact/fields/Death_Date__c.field-meta.xml
<CustomField>
    <fullName>Death_Date__c</fullName>
    <label>Death Date</label>
    <type>Date</type>
</CustomField>