force-app/main/default/objects/Contact/fields/District_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>District_Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] District Master Data</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts (District Master Data)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>