force-app/main/default/objects/Contact/fields/Domicile_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Kelurahan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Domicile_Kecamatan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Domicile_Kecamatan__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>