force-app/main/default/objects/Contact/fields/Domicile_Map__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Map__c</fullName>
    <formula>IF(OR(ISBLANK(TEXT(Domicile_Latitude_Longitude__Latitude__s)), Domicile_Latitude_Longitude__Latitude__s = 0) || OR(ISBLANK(TEXT(Domicile_Latitude_Longitude__Longitude__s)), Domicile_Latitude_Longitude__Latitude__s = 0), &quot;No location available&quot;, HYPERLINK (&quot;https://www.google.com/maps?q=&quot; &amp; TEXT(Domicile_Latitude_Longitude__Latitude__s) &amp; &quot;,&quot; &amp; TEXT(Domicile_Latitude_Longitude__Longitude__s), &quot;View Domicile Address on Google Maps&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicile Map</label>
    <type>Text</type>
</CustomField>