force-app/main/default/objects/Contact/fields/Domicile_Province__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>