force-app/main/default/objects/Contact/fields/Domicile_RT__c.field-meta.xml
<CustomField>
    <fullName>Domicile_RT__c</fullName>
    <label>Domicile RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>