force-app/main/default/objects/Contact/fields/Domicile_RW__c.field-meta.xml
<CustomField>
    <fullName>Domicile_RW__c</fullName>
    <label>Domicile RW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>