force-app/main/default/objects/Contact/fields/Domicile_URL__c.field-meta.xml
<CustomField>
    <fullName>Domicile_URL__c</fullName>
    <label>Domicile URL</label>
    <type>Url</type>
</CustomField>