force-app/main/default/objects/Contact/fields/Domicile_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Zip_Code__c</fullName>
    <label>Domicile Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>