force-app/main/default/objects/Contact/fields/Economy_Sector_New__c.field-meta.xml
<CustomField>
    <fullName>Economy_Sector_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economy Sector</label>
    <referenceTo>API_Economy_Sector__c</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>