force-app/main/default/objects/Contact/fields/Education_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Education_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education</label>
    <referenceTo>Master_Education__c</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>