force-app/main/default/objects/Contact/fields/Family_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Family_Card_Number__c</fullName>
    <label>Family Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>