force-app/main/default/objects/Contact/fields/Fax_Area__c.field-meta.xml
<CustomField>
    <fullName>Fax_Area__c</fullName>
    <label>Fax Area</label>
    <type>Phone</type>
</CustomField>