force-app/main/default/objects/Contact/fields/Federated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Federated_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Federated Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>