force-app/main/default/objects/Contact/fields/FinServ__LanguagesSpoken__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LanguagesSpoken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Languages Spoken</label>
    <length>80</length>
    <type>Text</type>
</CustomField>