force-app/main/default/objects/Contact/fields/FinServ__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Belum Kawin</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Kawin</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cerai</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Duda / Janda&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>