force-app/main/default/objects/Contact/fields/Industry_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Type</label>
    <referenceTo>API_Industry_Group_and_Type__c</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>