force-app/main/default/objects/Contact/fields/Internal_Aswata__c.field-meta.xml
<CustomField>
    <fullName>Internal_Aswata__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if a user is an internal Aswata user.</description>
    <label>Internal Aswata</label>
    <type>Checkbox</type>
</CustomField>