force-app/main/default/objects/Contact/fields/Is_Created_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created By System</label>
    <type>Checkbox</type>
</CustomField>