force-app/main/default/objects/Contact/fields/Is_Edited__c.field-meta.xml
<CustomField>
    <fullName>Is_Edited__c</fullName>
    <formula>NOT(ISBLANK( Legal_Address__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Edited</label>
    <type>Checkbox</type>
</CustomField>