force-app/main/default/objects/Contact/fields/IsVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRBypassed__c</fullName>
    <formula>BLANKVALUE(ValidationBypassDateTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRBypassed</label>
    <type>Checkbox</type>
</CustomField>