force-app/main/default/objects/Contact/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Position</label>
    <referenceTo>Master_Job_Position__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>