force-app/main/default/objects/Contact/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Working Status</label>
    <referenceTo>Master_Status_Pekerjaan__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>