force-app/main/default/objects/Contact/fields/Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>Legal_Address__c</fullName>
    <label>Legal Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>