force-app/main/default/objects/Contact/fields/Legal_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kabupaten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal City/Kabupaten</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Legal_Province__c</field>
            <operation>equals</operation>
            <valueField>City_Master_Data__c.Province_Id__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts (Legal Kabupaten)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>