force-app/main/default/objects/Contact/fields/Legal_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kelurahan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Kelurahan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Legal_Kecamatan__c</field>
            <operation>equals</operation>
            <valueField>Sub_District_Master_Data__c.District_Id__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts (Legal Kelurahan)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>