force-app/main/default/objects/Contact/fields/Legal_Province__c.field-meta.xml
<CustomField>
    <fullName>Legal_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Contacts (Legal Province)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>