force-app/main/default/objects/Contact/fields/Legal_RW__c.field-meta.xml
<CustomField>
    <fullName>Legal_RW__c</fullName>
    <label>Legal RW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>