force-app/main/default/objects/Contact/fields/Legal_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Legal_Zipcode__c</fullName>
    <label>Legal Zipcode for Shareholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>