force-app/main/default/objects/Contact/fields/Length_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Work__c</fullName>
    <label>Length of Work</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>