force-app/main/default/objects/Contact/fields/Management_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Management_in_Charge__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  LastName  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management in Charge</label>
    <type>Text</type>
</CustomField>