force-app/main/default/objects/Contact/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marital Status</label>
    <referenceTo>Master_Marital__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>