force-app/main/default/objects/Contact/fields/Married_Date__c.field-meta.xml
<CustomField>
    <fullName>Married_Date__c</fullName>
    <label>Married Date</label>
    <type>Date</type>
</CustomField>