force-app/main/default/objects/Contact/fields/Missing_Data__c.field-meta.xml
<CustomField>
    <fullName>Missing_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Data</label>
    <type>Checkbox</type>
</CustomField>