force-app/main/default/objects/Contact/fields/Mobile_Phone_2_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_2_Formula__c</fullName>
    <formula>Mobile_Phone_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone 2</label>
    <type>Text</type>
</CustomField>