force-app/main/default/objects/Contact/fields/NPWP_Number__c.field-meta.xml
<CustomField>
    <fullName>NPWP_Number__c</fullName>
    <label>NPWP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>