force-app/main/default/objects/Contact/fields/Phone_Area__c.field-meta.xml
<CustomField>
    <fullName>Phone_Area__c</fullName>
    <label>Phone Area</label>
    <type>Phone</type>
</CustomField>