force-app/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profession</label>
    <referenceTo>Master_Occupation__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>