force-app/main/default/objects/Contact/fields/relationship__c.field-meta.xml
<CustomField>
    <fullName>relationship__c</fullName>
    <formula>&quot;ME&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>relationship</label>
    <type>Text</type>
</CustomField>