force-app/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Religion</label>
    <referenceTo>Master_Religion__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>