force-app/main/default/objects/Contact/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>