force-app/main/default/objects/Contact/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Informations</relationshipLabel>
    <relationshipName>Customer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>