force-app/main/default/objects/Contact/fields/Spouse_Economy_Sector__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Economy_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] Economy Sector</label>
    <referenceTo>Master_Economy_Sector__c</referenceTo>
    <relationshipLabel>Customer Informations (Economy Sector)</relationshipLabel>
    <relationshipName>Customer_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>