force-app/main/default/objects/Contact/fields/Spouse_Education__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Education__c</fullName>
    <label>[Del] Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education</valueSetName>
    </valueSet>
</CustomField>