force-app/main/default/objects/Contact/fields/Spouse_Education_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Education_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education</label>
    <referenceTo>Master_Education__c</referenceTo>
    <relationshipLabel>Customer Informations (Education)</relationshipLabel>
    <relationshipName>Customer_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>