force-app/main/default/objects/Contact/fields/Spouse_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Group__c</fullName>
    <label>[Del] Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaa</fullName>
                <label>Angkutan Laut</label>
            </value>
            <value>
                <fullName>bbb</fullName>
                <label>Ekspedisi</label>
            </value>
            <value>
                <fullName>ccc</fullName>
                <label>Rental</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>