force-app/main/default/objects/Contact/fields/Spouse_Industry_Group_Text__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Industry_Group_Text__c</fullName>
    <label>Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>